New website launched.

--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@ var LS_Meta = {"v":"6.1.6"};
 	<div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 		<div class="wpb_wrapper">
 			<ul>
-<li><a href="https://www.dropbox.com/s/uskbycwjukva3ag/Zakeri_Resume_970112_EN.pdf?dl=0">My resume [English-PDF] </a> &#8211; April 2018</li>
-<li><a href="https://www.dropbox.com/s/7zpxl68sx68cb3u/Zakeri_Resume_961201_FA.pdf?dl=0"> My resume [Persian-PDF] </a> &#8211; March 2017</li>
+<li><a href="https://www.dropbox.com/s/uskbycwjukva3ag/Zakeri_Resume_970112_EN.pdf?dl=0" target="_blank">My resume [English-PDF] </a> &#8211; April 2018</li>
+<li><a href="https://www.dropbox.com/s/7zpxl68sx68cb3u/Zakeri_Resume_961201_FA.pdf?dl=0" target="_blank"> My resume [Persian-PDF] </a> &#8211; March 2017</li>
 </ul>
 
 		</div>
