--- a/resources/index.html
+++ b/resources/index.html
@@ -205,35 +205,35 @@ var LS_Meta = {"v":"6.1.6"};
 </ul>
 <p><span style="color: #339966;">Have a programming question? <strong>Join us-:)</strong></span></p>
 <ul>
-<li><a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" rel="noopener"> Micropedia code group on the telegram </a></li>
-<li><a href="http://micropedia.ir/tutorials/" rel="noopener"> Micropedia programming tutorials (Persian) </a></li>
+<li><a href="https://telegram.me/joinchat/CBglrD-j_t5u9rA0DI5SSA" target="_blank"> Micropedia code group on the telegram </a></li>
+<li><a href="http://micropedia.ir/tutorials/" target="_blank"> Micropedia programming tutorials (Persian) </a></li>
 </ul>
 <p>Recommended programming resources:</p>
 <ul>
-<li><a href="http://micropedia.ir/category/cpp-essential-course/">Micropedia essential course on C and C++ (for beginners)</a></li>
-<li><a href="http://www.deitel.com/Books/C/CHowtoProgram7e/tabid/3635/Default.aspx">C How to Program (Book by Harvey Deitel and Paul Deitel)</a></li>
-<li><a href="http://www.deitel.com/Books/C/CHowtoProgram9e/tabid/3644/Default.aspx"><span data-original-name="C How to Program">C++ How to Program (</span><span data-ved="0ahUKEwja_pr6hdjaAhWjK5oKHWtpDLcQ2koI1gEoAjAN">Book by Harvey Deitel and Paul Deitel)</span></a></li>
+<li><a href="http://micropedia.ir/category/cpp-essential-course/" target="_blank">Micropedia essential course on C and C++ (for beginners)</a></li>
+<li><a href="http://www.deitel.com/Books/C/CHowtoProgram7e/tabid/3635/Default.aspx" target="_blank">C How to Program (Book by Harvey Deitel and Paul Deitel)</a></li>
+<li><a href="http://www.deitel.com/Books/C/CHowtoProgram9e/tabid/3644/Default.aspx" target="_blank"><span data-original-name="C How to Program">C++ How to Program (</span><span data-ved="0ahUKEwja_pr6hdjaAhWjK5oKHWtpDLcQ2koI1gEoAjAN">Book by Harvey Deitel and Paul Deitel)</span></a></li>
 <li>to be continued &#8230;</li>
 </ul>
 <div class="d1rFIf" role="heading" aria-level="3"></div>
 <p>Recommended programming resource for <strong><span style="color: #339966;">children</span></strong>:</p>
 <ul>
-<li><a href="https://scratch.mit.edu/">Scratch (MIT Media Lab)</a></li>
+<li><a href="https://scratch.mit.edu/" target="_blank">Scratch (MIT Media Lab)</a></li>
 <li>to be continued &#8230;</li>
 </ul>
 <p>Other useful links:</p>
 <ul>
-<li><a href="https://github.com/m-zakeri/" rel="noopener"> My GitHub projects [new] </a></li>
-<li><a href="https://github.com/mortazazakeri" rel="noopener"> My GitHub projects [old] </a></li>
-<li><a href="https://gist.github.com/m-zakeri" rel="noopener"> My gist (code snip) </a></li>
+<li><a href="https://github.com/m-zakeri/" target="_blank"> My GitHub projects [new] </a></li>
+<li><a href="https://github.com/mortazazakeri" target="_blank"> My GitHub projects [old] </a></li>
+<li><a href="https://gist.github.com/m-zakeri" target="_blank"> My gist (code snip) </a></li>
 </ul>
 <ul>
-<li><a href="http://zakerim.webs.com/" rel="noopener"> My old blog </a></li>
-<li><a href="https://www.linkedin.com/in/mortazazakeri/" rel="noopener"> My LinkedIn profile </a></li>
-<li><a href="https://www.slideshare.net/MortezaZakeri" rel="noopener"> My SlideShare profile </a></li>
+<li><a href="http://zakerim.webs.com/" target="_blank"> My old blog </a></li>
+<li><a href="https://www.linkedin.com/in/mortazazakeri/" target="_blank"> My LinkedIn profile </a></li>
+<li><a href="https://www.slideshare.net/MortezaZakeri" target="_blank"> My SlideShare profile </a></li>
 </ul>
 <ul>
-<li><a href="http://micropedia.ir/download/" rel="noopener"> Other resources and materials </a></li>
+<li><a href="http://micropedia.ir/download/" target="_blank"> Other resources and materials </a></li>
 </ul>
 
 		</div>
