Change title from msc to phd student.

--- a/index.html
+++ b/index.html
@@ -208,12 +208,12 @@ var LS_Meta = {"v":"6.1.6"};
 		<div class="wpb_wrapper">
 			<h2><strong>Morteza ZAKERI<br />
 </strong></h2>
-<h3><strong>M.Sc. Student, Computer Engineering<br />
+<h3><strong>Ph.D. Student, Computer Engineering<br />
 </strong></h3>
 <h3><strong>Iran University of Science and Technology</strong></h3>
 <ul>
-<li><span style="color: #000000;"><strong>Website: <span style="color: #333300;">m-zakeri.ir</span></strong></span></li>
-<li><span style="color: #000000;"><strong>EMail: <span style="color: #333300;">m-zakeri@live.com</span></strong></span></li>
+<li><span style="color: #000000;"><strong>URLs: <span style="color: #333300;">m-zakeri.ir | https://m-zakeri.github.io/ | m-zakeri.github.io|</span></strong></span></li>
+<li><span style="color: #000000;"><strong>EMails: <span style="color: #333300;">m-zakeri@live.com | morteza_zakeri@comp.iust.ac.ir</span></strong></span></li>
 </ul>
 
 		</div>
@@ -228,10 +228,15 @@ var LS_Meta = {"v":"6.1.6"};
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-9"><div class="vc_column-inner "><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element  wpb_animate_when_almost_visible wpb_fadeIn fadeIn">
 		<div class="wpb_wrapper">
-			<p><strong>W</strong>elcome to my blog. I study master of computer engineering at <a href="http://www.iust.ac.ir/en" rel="noopener"> Iran University of Science and Technology (IUST)</a>. I have got my B.Sc. in computer engineering/ software from <a href="http://en.araku.ac.ir/" rel="noopener"> Arak University</a>. Here I share some of my academic works and projects with you.</p>
-<p>My research interest is about Automate Software Engineering (ASE), specially automate software testing. Currently, I have focused on fuzz testing and test data generation in file format fuzzers. I want to use deep neural networks to statistically capture the format of highly complex file structures and then build a generative model to generate new test data. It seems that there is a straight relationship between well-formed files and percentage of code coverage when Software Under Test (SUT) was executed with such files as input.</p>
-<p>I am a member of IUST Reverse Engineering Research Laboratory and work under the supervision of Dr. Saeed Parsa. You can find and read more information here.</p>
-<p>From summer 2013 my friends and I also maintain <a href="http://micropedia.ir/" rel="noopener"> Micropedia </a> a free software engineering/ programming tutorials website in Persian. You can find some basic programming tutorials on Micropedia. There is no commenting tool at this blog right now and you can contact me by email to M &#8211; Z A K E R I [AT] L I V E [DOT] C O M.</p>
+			<p align="justify"><strong>W</strong>elcome to my webpage. I am a Ph.D. student at <a href="http://www.iust.ac.ir/en" target="blank"> Iran University of Science and Technology (IUST)</a>. I have got my B.Sc. in computer engineering/ software from <a href="http://en.araku.ac.ir/" target="blank"> Arak University</a> and then received my M.Sc. degree from <a href="http://www.iust.ac.ir/en" target="blank"> Iran University of Science and Technology (IUST)</a>. In my M.Sc. thesis, I designed and built <a href="https://github.com/m-zakeri/iust_deep_fuzz" target="blank">IUST DeepFuzz </a>, a file format fuzzer which can learn the grammar/structure of file automatically and then generate various test data. In my B.Sc. project, I worked on agent-oriented software engineering and developed a multi-agent system to participate in the multi-agent programming contest (<a href="https://multiagentcontest.org/" target="blank">MAPC</a>).
+			</p>
+			<p align="justify">My research interest is about automated software engineering (ASE), especially automated software testing. Currently, I have focused on fuzz testing and test data generation in file format fuzzers. I want to use deep neural networks to statistically capture the format of highly complex file structures and then build a generative model to generate new test data. It seems that there is a straight relationship between well-formed files and percentage of code coverage when Software Under Test (SUT) was executed with such files as input.
+			</p align="justify">
+			<p align="justify">Currently, I am a member of <a href="http://parsa.iust.ac.ir/reverse-engineering-lab/" target="blank">IUST Reverse Engineering Research Laboratory </a> and work under the supervision of <a href="http://parsa.iust.ac.ir" target="blank">Dr. Saeed Parsa</a>. You can find and read more information on the <a href="http://parsa.iust.ac.ir/reverse-engineering-lab/" target="blank">laboratory website</a>. As a software engineer, I know about software development methodologies, software architectures, enterprise applications design and development, programming, and computer networks. I am an expert in object-oriented design, database concepts, and ORMs. During the IUST master program, I learned about distributed systems, advanced software engineering, reverse engineering, cluster, grid, and cloud computing, and secure and dependable software systems design.
+
+			</p>
+			<p align="justify">From summer 2013 my friends and I also maintain <a href="http://micropedia.ir/" target="blank"> Micropedia </a> a free software engineering/ programming tutorials website in Persian. You can find some basic programming tutorials on Micropedia. There is no commenting tool here on this blog yet. You can contact me by sending an email to:
+			<code> M &#8211; Z A K E R I [AT] L I V E [DOT] C O M.</code></p>
 
 		</div>
 	</div>
